# ComfyUI-Tikpan-Pro

./: .comfyignore  .feishu_config.example.json  .gitignore  .tracking  .wechat_config.example.json  CHANGELOG.md  README.md  REPOSITORIES.md  __init__.py  diagnose.py  pyproject.toml  setup-repos.ps1  test_nodes.py
.workbuddy/: Tikpan_ComfyUI_Web_执行方案.md
data/: README.md
docs/: ComfyUI精准提示词完全指南.md  PSD节点使用指南.md  Tikpan_AI_Director_规划.md  Tikpan_Async_Engine_无限画布式并行说明.md  Tikpan_ComfyUI_节点功能分类.md  Tikpan_Parallel_Engine_ComfyUI_使用说明.md  apifox_ip233_model_additions.md  apifox_new_ip233_additions.apifox.json  apifox_new_ip233_additions.openapi.json  web_app数据库迁移说明.md  内容同步可视化工具.md  提示词库使用指南.md  节点使用教程.md  节点速查表.md  飞书Wiki同步指南.md  飞书文档同步指南.md
landing-page/: index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js
nodes/: tikpan_async_nodes.py  tikpan_async_task_engine.py  tikpan_cangyuan_gpt_image_2.py  tikpan_cangyuan_grok_video_15.py  tikpan_cangyuan_video_models.py  tikpan_categories.py  tikpan_doubao_image.py  tikpan_doubao_tts.py  tikpan_gemini35_flash.py  tikpan_gemini3_flash_preview_analyst.py  tikpan_gemini_image.py  tikpan_gemini_omni_video.py  tikpan_gemini_tts.py  tikpan_gemini_video_analyst.py  tikpan_google_banana_image.py  tikpan_google_gemini.py  tikpan_gpt5_mini_responses.py  tikpan_gpt_image_2_benefit.py  tikpan_gpt_image_2_edit.py  tikpan_gpt_image_2_gen.py  tikpan_gpt_image_2_official.py  tikpan_gpt_image_2_official_edit_v2.py  tikpan_gpt_image_node.py  tikpan_gpt_image_recovery.py  tikpan_grok_imagine_image.py  tikpan_grok_imagine_video.py  tikpan_grok_optimizer.py  tikpan_grok_video.py  tikpan_grok_video_15_benefit.py  tikpan_grok_videos.py  tikpan_happyhorse_common.py  tikpan_happyhorse_i2v.py  tikpan_happyhorse_r2v.py  (+22 more)
(+155 files in other folders)
