[project]
name = "comfyui-tikpan-pro"
version = "0.5.1"
description = "Tikpan 官方独家节点：支持 GPT-Image-2 高级多图编辑与视频生成"
readme = "README.md"
authors = [{ name = "htrert" }]
license = { text = "MIT License" }

[project.urls]
Repository = "https://github.com/htrert/ComfyUI-Tikpan-Pro"

[tool.comfy]
PublisherId = "htrert"
DisplayName = "Tikpan Official Nodes"
Icon = "👑"